[gd_scene load_steps=13 format=3 uid="uid://cf3lyxoa43kit"]

[ext_resource type="Script" path="res://scenes/crossers/Frog.gd" id="1_gg3h4"]
[ext_resource type="Texture2D" uid="uid://brgm3ptolrbji" path="res://assets/entities/FrogFull-Sheet.png" id="2_0xdhh"]
[ext_resource type="PackedScene" uid="uid://ctn8s6hg8toiu" path="res://scenes/components/CollisionComponent.tscn" id="3_c0kyb"]
[ext_resource type="PackedScene" uid="uid://b3bw5liu8eq7e" path="res://scenes/components/ScoreComponent.tscn" id="4_23ypl"]
[ext_resource type="AudioStream" uid="uid://bu0i02phseyc6" path="res://assets/audio/Person_Collision.wav" id="5_mytsf"]
[ext_resource type="PackedScene" uid="uid://uhrwqjvhiby8" path="res://scenes/components/TextEmitter.tscn" id="6_k8mxn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blmbn"]
size = Vector2(27, 20)

[sub_resource type="Animation" id="Animation_h2pug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_752rh"]
resource_name = "default"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_3fewj"]
resource_name = "stop"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87r8c"]
_data = {
"RESET": SubResource("Animation_h2pug"),
"default": SubResource("Animation_752rh"),
"stop": SubResource("Animation_3fewj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yo7xa"]
size = Vector2(27, 20)

[node name="Frog" type="CharacterBody2D" node_paths=PackedStringArray("score_comp", "collision_audio", "text_emitter", "animation") groups=["Person"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_gg3h4")
score_comp = NodePath("ScoreComponent")
collision_audio = NodePath("CollisionAudioPlayer")
text_emitter = NodePath("TextEmitter")
collision_score = 100
end_score = -100
speed = 6500.0
direction = "RIGHT"
animation = NodePath("AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_0xdhh")
hframes = 8
vframes = 2
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/entities",
"o_name": "",
"only_visible": true,
"op_exp": true,
"player": "AnimationPlayer",
"source": "I:/Files/Downloads/Frog.aseprite"
}

[node name="CollisionComponent" parent="." instance=ExtResource("3_c0kyb")]

[node name="Hitbox" type="CollisionShape2D" parent="CollisionComponent"]
position = Vector2(13.5, 0)
shape = SubResource("RectangleShape2D_blmbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_87r8c")
}

[node name="PersonCollision" type="CollisionShape2D" parent="."]
position = Vector2(13.5, 0)
shape = SubResource("RectangleShape2D_yo7xa")
disabled = true

[node name="ScoreComponent" parent="." instance=ExtResource("4_23ypl")]

[node name="CollisionAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mytsf")
volume_db = -2.81
bus = &"FX"

[node name="TextEmitter" parent="." instance=ExtResource("6_k8mxn")]
output_scale = Vector2(2.2, 2.2)

[connection signal="area_entered" from="CollisionComponent" to="." method="_on_collision_component_area_entered"]
[connection signal="area_exited" from="CollisionComponent" to="." method="_on_collision_component_area_exited"]
[connection signal="body_entered" from="CollisionComponent" to="." method="_on_collision_component_body_entered"]
